--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,17 @@ a{
     margin: 0 auto;
 }
 
-.btn{
-    padding: 5px 10px;
+.btn-chiaro{
+    padding: 10px 20px;
     background-color: white;
     border-radius: 30px;
 }
-
+.btn-scuro{
+    padding: 10px 20px;
+    background-color: rgb(34, 33, 33);
+    border-radius: 30px;
+    color: white;
+}
 
 
 hr{
@@ -128,14 +133,26 @@ div{
 /* Banner */
 .banner{
     /* debug */
-    padding: 50px;
+    padding: 60px;
     justify-content: center;
+
 }
 
 .banner-content{
 
-    background-color: rgb(248, 104, 128);
-    width: 800px;
+    /* background-color: rgb(248, 104, 128); */
+    width: 50%;
+    text-align: center;
+    color: white;
+    padding: 30px 0;
+}
+.banner-content h1{
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+}
+.banner-content p{
+    line-height: 30px;
+    margin-bottom: 30px;
 }
 
 /* Fine banner */
