--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ img{
 
 a{
     text-decoration: none;
+    color: inherit;
 
 }
 :root{
@@ -33,6 +34,12 @@ a{
     padding: 10px 20px;
     background-color: rgb(34, 33, 33);
     border-radius: 30px;
+    color: white;
+    margin-left: 20px;
+}
+.btn-color{
+    padding: 10px 20px;
+    background-color:var(--color);    border-radius: 30px;
     color: white;
     margin-left: 20px;
 }
@@ -208,6 +215,9 @@ h2{
     align-items: center;
     text-align: center;
 }
+.col-100 h3{
+    margin-bottom: 30px;
+}
 .col-15{
     min-width: 15%;
 }
@@ -221,7 +231,10 @@ h2{
     min-width: 40%;
     padding-top: 25px; 
     display: flex; 
-    align-items: center; 
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .footer{
@@ -247,8 +260,27 @@ ul a{
     color: var(--color);
 }
 .col-40-footer h3{
+    font-size: 2.3rem;
     color: var(--color);
 }
 .col-40-footer p{
-    color: white;
+    color: white;   
+}
+.italia{
+    display: flex;
+    align-items: center;
+}
+.italia p{
+    margin-left: 20px;
+}
+.italia img{
+    width: 20%;
+}
+.social{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.social i{
+    margin: 0 5px;
 }
